--- a/MatrixCalc/build.gradle
+++ b/MatrixCalc/build.gradle
@@ -22,8 +22,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     // You must install or update the Support Repository through the SDK manager to use this dependency.
-    compile 'com.android.support:support-v4:+'
-    compile('de.keyboardsurfer.android.widget:crouton:1.8.4') {
+    compile 'com.android.support:support-v4:19.+'
+    compile('de.keyboardsurfer.android.widget:crouton:1.8.4@aar') {
         // exclusion is not neccessary, but generally a good idea.
         exclude group: 'com.google.android', module: 'support-v4'
     }
